refactor: web vitals

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<title>Tania McCrea Steele Photography</title>
+		<meta name="description" content="Photography portfolio website for Tania McCrea Steele, a landscape and wildlife photographer from Bradford on Avon, Wiltshire">
 		<meta charset="utf-8" />
 		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
