--- a/src/app.html
+++ b/src/app.html
@@ -8,8 +8,8 @@
 		<meta name="description" content="Photography portfolio website for Tania McCrea Steele, a landscape and wildlife photographer from Bradford on Avon, Wiltshire">
 		<meta charset="utf-8" />
 		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/a7.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/a7.png">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
