add plausible, remove vercel analytics

--- a/src/app.html
+++ b/src/app.html
@@ -15,5 +15,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script defer data-domain="taniamccreasteele.com" src="https://plausible.io/js/script.js"></script>
 	</body>
 </html>
