--- a/src/app.html
+++ b/src/app.html
@@ -1,20 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-		<title>Tania McCrea Steele Photography</title>
-		<meta name="description" content="Photography portfolio website for Tania McCrea Steele, a landscape and wildlife photographer from Bradford on Avon, Wiltshire">
-		<meta charset="utf-8" />
-		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/a7.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/a7.png">
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-		<script defer data-domain="taniamccreasteele.com" src="https://plausible.io/js/script.js"></script>
-	</body>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Tania McCrea Steele Photography</title>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="50618c95-a29f-4e43-a261-a63c9936df17"
+    ></script>
+    <meta
+      name="description"
+      content="Photography portfolio website for Tania McCrea Steele, a landscape and wildlife photographer from Bradford on Avon, Wiltshire"
+    />
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/a7.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/a7.png" />
+    <meta name="viewport" content="width=device-width" />
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+    <script
+      defer
+      data-domain="taniamccreasteele.com"
+      src="https://plausible.io/js/script.js"
+    ></script>
+  </body>
 </html>
